--- a/package.json
+++ b/package.json
@@ -5,16 +5,24 @@
   "main": "npx ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "typeorm": "npx ts-node-dev ./node_modules/.bin/typeorm",
+    "migrations": "npx ts-node ./node_modules/.bin/typeorm migration:run",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gilberto",
   "license": "ISC",
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^9.1.0",
+    "path": "^0.12.7",
+    "sqlite3": "4.2.0",
+    "typeorm": "0.2.31"
   },
   "devDependencies": {
     "@types/express": "4.17.11",
     "ts-node-dev": "1.0.0-pre.65",
-    "typescript": "4.1.5"
+    "typescript": "4.1.5",
+    "@types/fs-extra": "^9.0.8"
   }
 }
